// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCards creates correct snapshot for an array of stacks 1`] = `
<div>
  <div
    class="makeStyles-stackDiv-1"
  >
    <div>
      <div>
        <div>
          StackCard mock 
          {"stack":{"displayName":"name1","id":"1","type":"type1"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
        <div>
          StackCard mock 
          {"stack":{"displayName":"name2","id":"2","type":"type2"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
        <div>
          StackCard mock 
          {"stack":{"displayName":"name3","id":"3","type":"type3"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
      </div>
      <div
        class="makeStyles-paginationControlBar-3"
      >
        <div />
        <div>
          <div
            style="width: 100%;"
          >
            <button
              aria-label="add"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Create expectedTypeName
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackCards creates correct snapshot for an empty array 1`] = `
<div>
  <div
    class="makeStyles-stackDiv-125"
  >
    <div>
      <div>
        <div
          class="makeStyles-placeholderCard-126"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
          >
            No items to display.
          </p>
        </div>
      </div>
      <div
        class="makeStyles-paginationControlBar-127"
      >
        <div />
        <div>
          <div
            style="width: 100%;"
          >
            <button
              aria-label="add"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Create expectedTypeName
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackCards creates correct snapshot when no create button 1`] = `
<div>
  <div
    class="makeStyles-stackDiv-202"
  >
    <div>
      <div>
        <div>
          StackCard mock 
          {"stack":{"displayName":"name1","id":"1","type":"type1"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
        <div>
          StackCard mock 
          {"stack":{"displayName":"name2","id":"2","type":"type2"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
        <div>
          StackCard mock 
          {"stack":{"displayName":"name3","id":"3","type":"type3"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackCards creates correct snapshot with different action button label prefix 1`] = `
<div>
  <div
    class="makeStyles-stackDiv-48"
  >
    <div>
      <div>
        <div
          class="makeStyles-placeholderCard-49"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
          >
            No items to display.
          </p>
        </div>
      </div>
      <div
        class="makeStyles-paginationControlBar-50"
      >
        <div />
        <div>
          <div
            style="width: 100%;"
          >
            <button
              aria-label="add"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Request expectedTypeName
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
